feat: migrate to Dart fetcher
Switch the repo to the Dart-based NGA fetcher, update wrappers/docs, and remove the legacy Python MVP implementation.

--- a/.gitignore
+++ b/.gitignore
@@ -46,7 +46,11 @@ env/
 # Project specific
 out/
 *.log
+
+# Sensitive cookie file (keep local)
 nga_cookie.txt
+
+# Data artifacts
 *.json
 
 # FVM Version Cache
