chore: organize sensitive files in private folder and update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -49,6 +49,11 @@ out/
 
 # Sensitive cookie file (keep local)
 nga_cookie.txt
+nga_post_curl.txt
+nga_post_all_curl.text
+
+# Private folder for sensitive files
+private/
 
 # Data artifacts
 *.json
