feat: implement login functionality with cookie management and webview integration

--- a/nga_app/pubspec.yaml
+++ b/nga_app/pubspec.yaml
@@ -32,12 +32,18 @@ dependencies:
     sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  # Use the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
 
   http: ^1.6.0
   html: ^0.15.6
   charset: ^2.0.1
+
+  webview_flutter: ^4.13.1
+  webview_flutter_android: ^4.7.0
+  webview_flutter_platform_interface: ^2.13.0
+  webview_cookie_manager_plus: ^2.0.17
+
 
 dev_dependencies:
   flutter_test:
