--- a/nga_app/pubspec.yaml
+++ b/nga_app/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   webview_flutter_android: ^4.7.0
   webview_flutter_platform_interface: ^2.13.0
   webview_cookie_manager_plus: ^2.0.17
+  shared_preferences: ^2.5.4
 
 
 dev_dependencies:
