--- a/nga_app/pubspec.yaml
+++ b/nga_app/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   webview_flutter_platform_interface: ^2.13.0
   webview_cookie_manager_plus: ^2.0.17
   shared_preferences: ^2.5.4
+  cached_network_image: ^3.3.1
 
 
 dev_dependencies:
