--- a/nga_app/pubspec.yaml
+++ b/nga_app/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   webview_cookie_manager_plus: ^2.0.17
   shared_preferences: ^2.5.4
   cached_network_image: ^3.3.1
+  path_provider: ^2.1.2
 
 
 dev_dependencies:
