--- a/nga_app/pubspec.yaml
+++ b/nga_app/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   shared_preferences: ^2.5.4
   cached_network_image: ^3.3.1
   path_provider: ^2.1.2
+  url_launcher: ^6.3.0
 
 
 dev_dependencies:
